--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mariadb": "^2.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "mariadb": "^2.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^5.21.13"
+    "sequelize": "^5.22.3"
   }
 }
