--- a/package.json
+++ b/package.json
@@ -17,18 +17,23 @@
     "url": "https://github.com/yanrotinsulu/nodejs-boilerplate/issues"
   },
   "homepage": "https://github.com/yanrotinsulu/nodejs-boilerplate#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
+  },
   "dependencies": {
+    "accesscontrol": "^2.2.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mariadb": "^2.4.2",
+    "mariadb": "^2.5.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^5.22.3"
+    "sequelize": "^5.22.3",
+    "swagger-jsdoc": "^4.3.2",
+    "swagger-ui-express": "^4.1.4"
   }
 }
