--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node app"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/yanrotinsulu/nodejs-boilerplate#readme",
   "devDependencies": {
+    "jest": "^26.6.3",
     "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
