--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "start": "node app"
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "repository": {
     "type": "git",
@@ -19,22 +20,23 @@
   "homepage": "https://github.com/yanrotinsulu/nodejs-boilerplate#readme",
   "devDependencies": {
     "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
     "accesscontrol": "^2.2.1",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mariadb": "^2.5.1",
+    "mariadb": "^2.5.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^5.22.3",
+    "sequelize": "^5.22.4",
     "swagger-jsdoc": "^4.3.2",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.6"
   }
 }
