--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "nodejs-boilerplate",
   "version": "1.0.0",
   "description": "",
@@ -19,9 +20,10 @@
   },
   "homepage": "https://github.com/yanrotinsulu/nodejs-boilerplate#readme",
   "devDependencies": {
-    "jest": "^26.6.3",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.7",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "typescript": "^5.5.3"
   },
   "dependencies": {
     "accesscontrol": "^2.2.1",
@@ -30,12 +32,12 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mariadb": "^2.5.3",
-    "passport": "^0.4.1",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^5.22.4",
+    "sequelize": "^6.37.3",
     "swagger-jsdoc": "^4.3.2",
     "swagger-ui-express": "^4.1.6"
   }
