--- a/app/data/config/config.json
+++ b/app/data/config/config.json
@@ -9,8 +9,8 @@
   },
   "development": {
     "username": "root",
-    "password": "Mandiri1",
-    "database": "boilerplate_dev",
+    "password": "password",
+    "database": "fypr",
     "host": "127.0.0.1",
     "dialect": "mariadb",
     "operatorsAliases": 0
