--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@babel/register": "^7.24.6",
     "accesscontrol": "^2.2.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
